--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "nest-cqrs-example",
-  "version": "1.0.0",
-  "description": "Nest CQRS module usage example",
-  "license": "MIT",
-  "scripts": {
-    "start": "nest start --watch"
-  },
-  "dependencies": {
-    "@nestjs/common": "^7.6.14",
-    "@nestjs/core": "^7.6.14",
-    "@nestjs/cqrs": "^7.0.1",
-    "@nestjs/platform-express": "^7.6.14",
-    "cli-color": "^2.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.6"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^7.5.6",
-    "@nestjs/schematics": "^7.3.0",
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.35",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
-  }
+    "name": "nest-cqrs-example",
+    "version": "1.0.0",
+    "description": "Nest CQRS module usage example",
+    "license": "MIT",
+    "scripts": {
+        "start": "nest start --watch",
+        "format": "prettier --write \"**/*.{ts,js,json,yml,md}\""
+    },
+    "dependencies": {
+        "@nestjs/common": "^7.6.14",
+        "@nestjs/core": "^7.6.14",
+        "@nestjs/cqrs": "^7.0.1",
+        "@nestjs/platform-express": "^7.6.14",
+        "cli-color": "^2.0.0",
+        "reflect-metadata": "^0.1.13",
+        "rxjs": "^6.6.6"
+    },
+    "devDependencies": {
+        "@nestjs/cli": "^7.5.6",
+        "@nestjs/schematics": "^7.3.0",
+        "@types/express": "^4.17.11",
+        "@types/node": "^14.14.35",
+        "nodemon": "^2.0.7",
+        "prettier": "^2.2.1",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.2.3"
+    }
 }
