--- a/package.json
+++ b/package.json
@@ -5,25 +5,41 @@
     "license": "MIT",
     "scripts": {
         "start": "nest start --watch",
-        "format": "prettier --write \"**/*.{ts,js,json,yml,md}\""
+        "format": "prettier --write \"**/*.{ts,js,json,yml,md}\"",
+        "lint": "eslint \"**/*.ts\""
     },
     "dependencies": {
-        "@nestjs/common": "^7.6.14",
-        "@nestjs/core": "^7.6.14",
-        "@nestjs/cqrs": "^7.0.1",
-        "@nestjs/platform-express": "^7.6.14",
-        "cli-color": "^2.0.0",
-        "reflect-metadata": "^0.1.13",
-        "rxjs": "^6.6.6"
+        "@nestjs/common": "7.6.14",
+        "@nestjs/core": "7.6.14",
+        "@nestjs/cqrs": "7.0.1",
+        "@nestjs/platform-express": "7.6.14",
+        "cli-color": "2.0.0",
+        "reflect-metadata": "0.1.13",
+        "rxjs": "6.6.6"
     },
     "devDependencies": {
-        "@nestjs/cli": "^7.5.6",
-        "@nestjs/schematics": "^7.3.0",
-        "@types/express": "^4.17.11",
-        "@types/node": "^14.14.35",
-        "nodemon": "^2.0.7",
-        "prettier": "^2.2.1",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.2.3"
+        "@nestjs/cli": "7.5.6",
+        "@nestjs/schematics": "7.3.0",
+        "@types/cli-color": "^2.0.0",
+        "@types/express": "4.17.11",
+        "@types/node": "14.14.35",
+        "@typescript-eslint/eslint-plugin": "4.18.0",
+        "@typescript-eslint/parser": "4.18.0",
+        "eslint": "7.22.0",
+        "eslint-config-prettier": "8.1.0",
+        "eslint-import-resolver-typescript": "2.4.0",
+        "eslint-plugin-eslint-comments": "3.2.0",
+        "eslint-plugin-import": "2.22.1",
+        "eslint-plugin-no-null": "1.0.2",
+        "eslint-plugin-node": "11.1.0",
+        "eslint-plugin-prefer-arrow": "1.2.3",
+        "eslint-plugin-rxjs": "3.1.1",
+        "eslint-plugin-security": "1.4.0",
+        "eslint-plugin-sonarjs": "0.6.0",
+        "eslint-plugin-unicorn": "28.0.2",
+        "nodemon": "2.0.7",
+        "prettier": "2.2.1",
+        "ts-node": "9.1.1",
+        "typescript": "4.2.3"
     }
 }
